--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
   - type: web
-    name: spam-detector-api
+    name: hello-flask-app
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
-    autoDeploy: true
+    startCommand: "python app.py"
